--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "pause": "^0.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14"
